--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "types": ["vite/client"]
 }
