--- a/components.json
+++ b/components.json
@@ -5,17 +5,17 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/styles/globals.css",
+    "css": "app/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
     "components": "@/shared/components",
-    "utils": "@/lib/utils",
-    "ui": "@/shared/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "lib": "@/shared/lib",
+    "utils": "@/shared/utils",
+    "hooks": "@/shared/hooks",
+    "ui": "@/shared/components/ui"
   },
   "iconLibrary": "lucide"
 }
