--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-compression": "^0.5.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
