--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "i18next": "^24.2.2",
     "lucide-react": "^0.474.0",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.4.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
