--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,4 @@
 VITE_API_URL=/api/v1
+VITE_ONE_ID_CLIENT_ID=ekotizim_cirns_uz
+VITE_ONE_ID_CLIENT_SECRET=rfxcTm2qC69r0Ar29Gjw286Z
+VITE_ONE_ID_REDIRECT_URL=https://ekotizim.cirns.uz/auth/login&scope=myportal&state=testState
