--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-query": "^5.64.2",
-    "@tanstack/react-query-devtools": "^5.64.2",
+    "@tanstack/react-query-devtools": "4",
     "@tanstack/react-table": "^8.20.6",
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.7.9",
