--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,6 @@
 VITE_API_URL=https://ekotizim.cirns.uz
+VITE_ONE_ID_CLIENT_ID=ekotizim_cirns_uz
+VITE_ONE_ID_CLIENT_SECRET=rfxcTm2qC69r0Ar29Gjw286Z
+VITE_ONE_ID_REDIRECT_URL=https://ekotizim.cirns.uz/auth/login&scope=myportal&state=testState
 DEV=true
+PROD=true
