--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+#VITE_API_URL=https://ekotizim.cirns.uz
 VITE_API_URL=https://test.cirns.uz
 VITE_ONE_ID_CLIENT_ID=ekotizim_cirns_uz
 VITE_ONE_ID_CLIENT_SECRET=rfxcTm2qC69r0Ar29Gjw286Z
