--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --ignore-unknown --write .",
     "lint": "eslint --fix .",
     "prepare": "husky",
+    "build:test": "env-cmd -f .env.test npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -53,6 +54,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-simple-captcha": "^9.3.1",
+    "react-to-print": "^3.1.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -63,9 +65,11 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/node": "^22.10.10",
+    "@types/qrcode.react": "^3.0.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "env-cmd": "^11.0.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
