--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "files": [],
 
   "compilerOptions": {
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
