--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@tailwindcss/language-server": "^0.14.29",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^22.10.10",
     "@types/qrcode.react": "^3.0.0",
     "@types/react": "^19.0.8",
@@ -78,14 +80,13 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.2",
     "prettier": "3.4.2",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0",
-    "prettier-plugin-tailwindcss": "^0.7.2",
-    "@tailwindcss/vite": "^4.0.0",
-    "vite-plugin-compression": "^0.5.1",
     "vite": "^7.2.7",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
