--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "env-cmd": "^11.0.0",
     "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
