--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-table": "^8.20.6",
     "@tinymce/tinymce-react": "^6.1.0",
+    "@types/react-paginate": "^7.1.4",
     "axios": "^1.13.2",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +55,7 @@
     "react-hook-form": "^7.54.2",
     "react-html-parser": "^2.0.2",
     "react-i18next": "^15.4.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-simple-captcha": "^9.3.1",
